Add retrieval of static files, and authentication based on which notes reference them.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /beardata/
 /priv/static/bimg
 /priv/static/bfile
+/config/*.secret.exs
 
 # The directory Mix will write compiled artifacts to.
 /_build/
